--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-br" >
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Página de Portfólio Karolina Santos</title>
@@ -12,10 +12,10 @@
   <div class="container">
     <header class="cabecalho">
       <div class="perfil">
-        <img class="perfil-foto" src="https://github.com/KarolinaAparecidaSantos.png" />
+        <img class="perfil-foto" src="foto_karolina.jpg" />
         <div class="titulo">
           <h1>Karolina Aparecida dos Santos</h1>
-          <h3>Desenvolvedora front-end #imersaodev</h3>
+          <h3>Desenvolvedora Web Front-end</h3>
         </div>
       </div>
       <div class="tema">
@@ -23,8 +23,8 @@
       </div>
     </header>
 
-    <main class="projetos">
-      <ul class="projetos-titulo">Projetos<ul>
+    <section class="projetos">
+      <ul class="projetos-titulo">Projetos no Codepen<ul>
           <li class="projetos-item">
             <p>🔢 Conversor de moeda</p>
             <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="NWMGRZV" data-user="karolsantka" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
@@ -43,7 +43,7 @@
             </p>
             <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
           </li>
-    </main>
+        </section>
   </div>
 </body>
 <!-- partial -->
