--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <button onclick="mudaTema()">Alterar tema</button>
       </div>
     </header>
+    <section class="projetos-html">
+      <h3 class="projetos-titulo">Projetos HTML e CSS</h3>
+      <p>CHAVE DE LUZ - Site criado no ano de 2012</p>
+      <a href="//karolinaaparecidasantos.github.io/sitechavedeluz/">Link para acessar o site: </a>
+      <p><img src="capa_chaveluz.png" alt="Imagem do site Chave de Luz" text="Imagem do site Chave de Luz" height="330" width="650"/></p>
+
+    </section>
 
     <section class="projetos">
       <ul class="projetos-titulo">Projetos no Codepen<ul>
